--- a/JerseyTest/pom.xml
+++ b/JerseyTest/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>jersey-media-multipart</artifactId>
 		</dependency>
 
+		<!-- log -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.12</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
